5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1630_2945.log
== TEST (2019-04-02 16:06:31) 
-- CODE:
from math import*
D = float(input('valor de D:' ))
T = float(input('valor de T:'))
-- OUTPUT:
valor de D:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:07:41) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = int(input('quantidade de panquecas: '))
from math import*

-- OUTPUT:
valor de D:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:09:22) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = int(input('quantidade de panquecas: '))
from math import*
M = D**2*T*pi*P/4
-- OUTPUT:
valor de D:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:09:32) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = int(input('quantidade de panquecas: '))
from math import*
M = D**2*T*pi*P/4
-- EXECUTION TIME:
0.179708
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D:
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D:
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:09:45) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = int(input('quantidade de panquecas: '))
from math import*
M = (D**2*T*pi*P/4)
print(M)
-- OUTPUT:
valor de D: 1197.0221992413972
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:09:48) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = int(input('quantidade de panquecas: '))
from math import*
M = (D**2*T*pi*P/4)
print(M)
-- EXECUTION TIME:
0.164008
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.0221992413972
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.269908169872416
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66370614359172
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:09:59) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = int(input('quantidade de panquecas: '))
from math import*
M = (D**2*T*pi*P/4)
print(M)
-- OUTPUT:
valor de D: 1197.0221992413972
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:10:26) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = int(input('quantidade de panquecas: '))
from math import*
M = (D**2)*(T*pi*P)/4
print(M)
-- OUTPUT:
valor de D: 1197.0221992413974
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:10:28) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = int(input('quantidade de panquecas: '))
from math import*
M = (D**2)*(T*pi*P)/4
print(M)
-- EXECUTION TIME:
0.161048
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.0221992413974
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.269908169872416
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66370614359172
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:10:51) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = int(input('quantidade de panquecas: '))
from math import*
M = (D**2)*(T*pi*P)/4
print(round(M,2))
-- EXECUTION TIME:
0.160615
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:10:52) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = int(input('quantidade de panquecas: '))
from math import*
M = (D**2)*(T*pi*P)/4
print(round(M,2))
-- OUTPUT:
valor de D: 1197.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:11:12) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = int(input('quantidade de panquecas: '))
from math import*
M = (D**2)*(T*pi*P)/4
print(round(M,2))
-- OUTPUT:
valor de D: 1197.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:11:30) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = int(input('quantidade de panquecas: '))
from math import*
M = (D**2)*(T*pi*P)/4
print(round(M,2))
-- EXECUTION TIME:
0.141694
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:11:40) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = int(input('quantidade de panquecas: '))
from math import*
M = (D**2)*(T*pi*P)/4
print(round(M,2))
-- OUTPUT:
valor de D: 1197.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:11:47) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = int(input('quantidade de panquecas: '))
from math import*
M = (D**2)*(T*pi*P)/4
print(round(M,2))
-- OUTPUT:
valor de D: 1197.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:12:15) 
-- CODE:
D = float(input('valor de D? ' ))
T = float(input('valor de T? '))
P = int(input('quantidade de panquecas? '))
from math import*
M = (D**2)*(T*pi*P)/4
print(round(M,2))
-- OUTPUT:
valor de D? 1197.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:12:19) 
-- CODE:
D = float(input('valor de D? ' ))
T = float(input('valor de T? '))
P = int(input('quantidade de panquecas? '))
from math import*
M = (D**2)*(T*pi*P)/4
print(round(M,2))
-- EXECUTION TIME:
0.187099
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D? 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D? 39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D? 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:12:43) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))
from math import*
M = (D**2)*(T*pi*P)/4
print(round(M,2))
-- OUTPUT:
valor de D: 1197.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:12:45) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))
from math import*
M = (D**2)*(T*pi*P)/4
print(round(M,2))
-- EXECUTION TIME:
0.224321
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:13:07) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))
from math import*
M = ((D**2)*(T*pi*P)/4)
print(round(M,2))
-- OUTPUT:
valor de D: 1197.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:13:10) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))
from math import*
M = ((D**2)*(T*pi*P)/4)
print(round(M,2))
-- EXECUTION TIME:
0.170162
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:13:31) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))
from math import*
M = ((D**2)*(T*pi*P)/4)
print(round(M, 2))
-- EXECUTION TIME:
0.175657
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: valor de T: quantidade de panquecas: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: valor de T: quantidade de panquecas: 39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: valor de T: quantidade de panquecas: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:15:23) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))
from math import*
M = ((D**2)*(T*pi*P)/4)
print(round(M, 2))
-- EXECUTION TIME:
0.174374
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:24) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))
from math import*
M = ((D**2)*(T*pi*P)/4)
print(round(M, 2))
-- OUTPUT:
valor de D: 1197.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:16:14) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))
from math import*
M = ((D**2)*(T*pi*P)/4)
print(round(M, 2))
-- EXECUTION TIME:
0.298088
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:16:17) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))
from math import*
M = ((D**2)*(T*pi*P)/4)
print(round(M, 2))
-- EXECUTION TIME:
0.168865
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:16:24) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: ')) 
 from math import*
M = ((D**2)*(T*pi*P)/4)
print(round(M, 2))
-- EXECUTION TIME:
0.238831
-- ERROR:
  File "/home/codebench/codes/1630/2945/main.py", line 4
    from math import*
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:16:32) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P)/4)
print(round(M, 2))
-- OUTPUT:
valor de D: 1197.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:16:34) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P)/4)
print(round(M, 2))
-- EXECUTION TIME:
0.174394
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:33) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P)/4
print(round(M, 2))
-- ERROR:
File "XXXX", line 7
    print(round(M, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:17:40) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P)/4)
print(round(M, 2))
-- EXECUTION TIME:
0.112621
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:18:01) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P)
print(round(M, 2))
-- ERROR:
File "XXXX", line 7
    print(round(M, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:18:12) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P))

-- OUTPUT:
valor de D:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:18:24) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P))
print(M/4)

-- OUTPUT:
valor de D: 1197.0221992413974
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:18:46) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P))
print(M/4)
print(round(M))

-- EXECUTION TIME:
0.131394
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.0221992413974
4788
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.269908169872416
157
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66370614359172
503
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:18:47) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P))
print(M/4)
print(round(M))

-- OUTPUT:
valor de D: 1197.0221992413974
4788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:19:30) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P))
print(M/4)
print(round(M, 2))
-- OUTPUT:
valor de D: 1197.0221992413974
4788.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:19:33) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P))
print(M/4)
print(round(M, 2))
-- EXECUTION TIME:
0.207468
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.0221992413974
4788.09
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.269908169872416
157.08
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66370614359172
502.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:19:38) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P))
print(M/4)
print(round(M, 2))
-- EXECUTION TIME:
0.216042
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.0221992413974
4788.09
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.269908169872416
157.08
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66370614359172
502.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:20:44) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P))/4
print(round(M, 2))
-- EXECUTION TIME:
0.176416
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:20:45) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P))/4
print(round(M, 2))
-- OUTPUT:
valor de D: 1197.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:22:27) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P))/4
print(round(M, 2,'ml'))
-- EXECUTION TIME:
0.208544
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2945/main.py", line 7, in <module>
    print(round(M, 2,'ml'))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:22:28) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P))/4
print(round(M, 2,'ml'))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(M, 2,'ml'))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:22:56) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P))/4
print(round(M, 2,))
-- OUTPUT:
valor de D: 1197.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:22:56) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P))/4
print(round(M, 2,))
-- OUTPUT:
valor de D: 1197.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:22:57) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P))/4
print(round(M, 2,))
-- EXECUTION TIME:
0.18188
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 1197.02
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:22:57) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P))/4
print(round(M, 2,))
-- EXECUTION TIME:
0.200405
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 1197.02
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 39.27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:22:57) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P))/4
print(round(M, 2,))
-- EXECUTION TIME:
0.256296
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 125.66
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:

-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:23:44) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P))/4
print(round(M, 2,))
-- OUTPUT:
valor de D: 1197.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:23:46) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = ((D**2)*(T*pi*P))/4
print(round(M, 2,))
-- EXECUTION TIME:
0.166787
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:24:19) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = D**2*T*pi*P/4
print(round(M, 2,))
-- OUTPUT:
valor de D: 1197.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:24:22) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = D**2*T*pi*P/4
print(round(M, 2,))
-- EXECUTION TIME:
0.144584
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:24:40) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = D**2*T*pi*P/4
print(round(M, 2))
-- EXECUTION TIME:
0.177643
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:25:52) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = (D**2*T*pi*P)/4
print(round(M, 2))
-- OUTPUT:
valor de D: 1197.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:25:55) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = float(input('quantidade de panquecas: '))

from math import*
M = (D**2*T*pi*P)/4
print(round(M, 2))
-- EXECUTION TIME:
0.202989
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:26:14) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = int(input('quantidade de panquecas: '))

from math import*
M = (D**2*T*pi*P)/4
print(round(M, 2))
-- EXECUTION TIME:
0.154169
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:26:15) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = int(input('quantidade de panquecas: '))

from math import*
M = (D**2*T*pi*P)/4
print(round(M, 2))
-- OUTPUT:
valor de D: 1197.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:27:48) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = int(input('quantidade de panquecas: '))

from math import*
M = (D**2*T*pi*P)/4
print(round(M, 2))
-- OUTPUT:
valor de D: 1197.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:28:13) 
-- CODE:
D = float(input('valor de D: ' ))
T = float(input('valor de T: '))
P = int(input('quantidade de panquecas: '))

from math import*
M = (D**2*T*pi*P)/4
print(round(M, 2))
-- EXECUTION TIME:
0.149957
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
valor de D: 1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
valor de D: 39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
valor de D: 125.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:28:38) 
-- CODE:
D = float(input( ))
T = float(input( ))
P = int(input( ))

from math import*
M = (D**2*T*pi*P)/4
print(round(M, 2))
-- EXECUTION TIME:
0.144848
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
1197.02
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
39.27
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
125.66
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
